styles.css
/* ... */
.view-detail {
  background-color: RGB(29, 31, 44);
  color: white;
  text-align: center;
  padding: 10px 20px;
  border-radius: 4px;
}

.item-name {
  font-size: 1rem;
}
.view-detail:hover {
  color: #dedede;
}
.company-name {
  margin-bottom: 0.2rem;
  margin-top: 1rem;
  font-weight: 550;
}
.section-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 1008px;
  content: " ";
  display: table;
  grid-column-start: 1;
  grid-row-start: 1;
  grid-column-end: 2;
  grid-row-end: 2;
}
.section-container .section-row {
  margin-left: 9px;
  margin-right: 48px;
}

.section-title,
.client-logos-section-title {
  margin-top: 0px;
  font-family: Montserrat, sans-serif;
  font-size: 20px;
  line-height: 27px;
  font-weight: 300;
  letter-spacing: 2px;
}
.product-heading-section {
  margin-top: 10px;
  margin-bottom: 15px;
  font-size: 36px;
  line-height: 50px;
  font-weight: 400;
  text-transform: none;
}

.title-divider,
.section-breaker {
  display: block;
  width: 20%;
  height: 1px;
  margin: 16px auto;
  background-color: #dedede;
  list-style-type: lower-alpha;
}

/* Client Logos Section */

.client-logos {
  padding-right: 15px;
  padding-bottom: 89px;
  padding-left: 15px;
}

.client-logos-container {
  margin-left: auto;
  margin-right: auto;
  max-width: 940px;
}

.client-logos-section-heading {
  text-align: center;
}

.client-logos-grid {
  display: -ms-grid;
  display: grid;
  grid-auto-columns: 1fr;
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  -ms-grid-rows: auto auto;
  grid-template-rows: auto auto;
  grid-row-gap: 16px;
  grid-column-gap: 16px;
}

.brands-image {
  display: block;
  width: 100%;
  height: auto;
  margin: -57px;
  padding: 0px;
  opacity: 0.49;
  -webkit-filter: grayscale(100%);
  filter: grayscale(100%);
  -webkit-transition: opacity 300ms ease;
  transition: opacity 300ms ease;
}

#kirloskar-logo,
#ojus-power-logo,
#jain-logo,
#greaves-logo,
#kisan-kraft-logo,
#espa-logo {
  -ms-grid-row-align: center;
  align-self: center;
  -ms-grid-column-align: center;
  justify-self: center;
  -ms-grid-row: span 1;
  grid-row-start: span 1;
  -ms-grid-row-span: 1;
  grid-row-end: span 1;
  -ms-grid-column: span 1;
  grid-column-start: span 1;
  -ms-grid-column-span: 1;
  grid-column-end: span 1;
}

.section-heading {
  text-align: center;
}
/* Section: Contact */
#contact {
  font-family: Montserrat, sans-serif;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  margin: 100px 70px 100px 50px;
}

#contact .contact-form {
  padding: 25px;
}
.m-heading {
  margin: 0.75rem;
  font-weight: 400;
  font-size: 32px;
  line-height: 36px;
}

#contact .contact-form .form-group {
  margin: 0.75rem;
}

#contact .contact-form label {
  display: block;
  margin: 15px 0px 5px 0px;
  font-weight: bold;
  display: block;
  font-size: 14px;
}
#contact .contact-form textarea {
  height: 200px;
  padding: 12px 25px;
}

#contact .contact-form input,
#contact .contact-form textarea {
  width: 100%;
  font-size: 13px;
  font-family: Montserrat, sans-serif;
  border: solid #eee 0.5px;
  border-radius: 0px;
  line-height: 20px;
  letter-spacing: 2px;
  text-decoration: none;
}
#contact .contact-form input {
  padding: 12px 25px;
}
.btn-dark {
  margin-top: 5px;
  background-color: black !important;
  color: white !important;
}
.btn-dark:hover {
  background-color: #32343a;
  color: #fff;
  text-transform: uppercase;
}

#contact .contact-form {
  padding: 45px 50px 50px;
  border-style: solid;
  border-width: 1px;
  border-color: #eee;
  width: 70%;
}
.detail-wrap {
  margin-bottom: 30px;
}
.label {
  margin-top: 10px;
  font-size: 12px;
  line-height: 20px;
  font-weight: 500;
  letter-spacing: 1px;
  text-transform: uppercase;
}
.contact-email-link {
  margin-bottom: 5px;
  opacity: 0.6;
  color: #333;
}
.paragraph-light {
  margin-bottom: 10px;
  opacity: 0.6;
  line-height: 25px;
  text-align: justify;
}

/* Sub-Footer */

.footer-container {
  position: relative;
  display: block;
  margin-top: 0px;
  border-top: 1px solid #ebebeb;
  background-color: hsla(0, 0%, 85.9%, 0.1);
  color: #333;
  opacity: 0.9;
  line-height: 24px;
}

.footer-heading {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin-top: 2rem;
  padding-top: 6rem;
  margin-bottom: 4rem;
}

.footer-flex-items {
  display: flex;
  text-align: center;
  justify-content: center;
  height: 100%;
  gap: 4rem;
  flex-wrap: wrap;
}

.footer-flex-items > div {
  padding: 1rem 6rem;
}

/* Main Footer */

.main-footer-container {
  display: block;
  margin-top: 80px;
  padding-top: 30px;
  padding-bottom: 20px;
  border-top: 1px solid #ebebeb;
  background-color: hsla(0, 0%, 85.9%, 0.1);
}

.main-footer {
  position: relative;
  z-index: 1;
  display: block;
  width: 1170px;
  height: 100%;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
  padding-right: 24px;
  padding-left: 24px;
  color: #fff;
  text-align: center;
  display: block;
  color: rgba(0, 0, 0, 0.43);
  font-size: 12px;
  letter-spacing: 0px;
}

.main-footer-heading {
  display: inline-block;
  padding-left: 1px;
  font-size: 12px;
  line-height: 22px;
  font-weight: 500;
  text-align: right;
  margin-bottom: 0.7rem;
}

.main-footer-heading a {
  margin-right: 2px;
  margin-left: 2px;
  -webkit-transition: all 400ms ease;
  transition: all 400ms ease;
  color: #000;
  text-decoration: none;
  background-color: transparent;
}

.main-footer-text {
  display: block;
  color: rgba(0, 0, 0, 0.43);
  font-size: 12px;
  letter-spacing: 0px;
}
/* ... */

